--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <img src="resources/images/img-tea-cozy-logo.webp" alt="logo">
         <nav>
-            <a href="">Mission</a>
-            <a href="">Featured Tea</a>
-            <a href="">Locations</a>
+            <a href="#mission">Mission</a>
+            <a href="#featured-tea">Featured Tea</a>
+            <a href="#locations">Locations</a>
         </nav>
     </header>
     <main>
@@ -37,24 +37,60 @@
                         <img src="resources/images/img-berryblitz.webp" alt="">
                         <h4>Fall Berry Blitz Tea</h4>
                     </div>
-                    <div><img src="/resources/images/" alt="">
-                        <h4></h4>
+                    <div><img src="resources/images/img-spiced-rum.webp" alt="">
+                        <h4>Spiced Rum Tea</h4>
                     </div>
-                    <div><img src="/resources/images/" alt="">
-                        <h4></h4>
+                    <div><img src="resources/images/img-donut.webp" alt="">
+                        <h4>Seasonal Donuts</h4>
                     </div>
-                    <div><img src="/resources/images/" alt="">
-                        <h4></h4>
+                    <div><img src="resources/images/img-myrtle-ave.webp" alt="">
+                        <h4>Myrtle Ave Tea</h4>
                     </div>
-                    <div><img src="/resources/images/" alt="">
-                        <h4></h4>
+                    <div><img src="resources/images/img-bedford-bizarre.webp" alt="">
+                        <h4>Bedford Bizarre Tea</h4>
                     </div>
 
                 </section>
             </section>
         </section>
+        <section id="locations">
+            <section>
+                <section class="cozy-tea">
+                    <h2>Locations</h2>
+                    <div class="tea-locations">
+                        <div>
+                            <h3>Downtown</h3>
+                            <p>384 West 4th St</p>
+                            <p>Suite 108</p>
+                            <p>Portland, Maine</p>
+                        </div>
+                        <div>
+                            <h3>East Bayside</h3>
+                            <p>3433 Phisherman's Avenue</p>
+                            <p>(Northwest Corner)</p>
+                            <p>Portland, Maine</p>
+                        </div>
+                        <div>
+                            <h3>Oakdale</h3>
+                            <p>515 Crescent Avenue</p>
+                            <p>Second Floor</p>
+                            <p>Portland, Maine</p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </section>
+        <section id="contact">
+            <section>
+                <h2>The Tea Cozy</h2>
+                <h5>contact@theteacozy.com</h5>
+                <p>917-555-8904</p>
+            </section>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>copyright The Tea Cozy 2017</p>
+    </footer>
 </body>
 
 </html>
